--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My Resume</title>
 </head>
 <body>
-<img src="img/me.jpg" alt="what !!!">
+<img src="img/me.jpg" alt="what !!!" width=500px; height=auto>
 <h1>Shiv Patel</h1>
 <br />
 <hr />
