--- a/index.html
+++ b/index.html
@@ -3,40 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styler.css"/>
     <title>My Resume</title>
 </head>
 <body>
-<img src="img/me.jpg" alt="what !!!" width=500px; height=auto>
+<img src="img/me.jpg" alt="what !!!" width=auto; height=450px>
 <h1>Shiv Patel</h1>
 <br />
 <hr />
 <ul>
 <li>
-    <h2>Summary</h2>
+    <h2 class="restofthings">Summary</h2>
 </li>
-<p>👋 Hi, I'm Shiv, a CS student delving into the fascinating world of Quantum Computing. 🚀 With a keen eye for logical problem-solving and a knack for coding, I'm navigating the digital landscape.<br>
+<p class="restofthings">👋 Hi, I'm Shiv, a CS student delving into the fascinating world of Quantum Computing. 🚀 With a keen eye for logical problem-solving and a knack for coding, I'm navigating the digital landscape.<br>
 
     💡 Beyond algorithms, my professional journey is fueled by a vision of contributing to positive change through technology. Inspired by visionaries like Elon Musk, I'm eager to leverage innovation to make a lasting impact.<br>
     
     🌐 Always looking to expand my network, I'm here to connect with like-minded professionals, explore new opportunities, and contribute to meaningful projects. Let's connect and explore possibilities together! Feel free to reach out. 🌟 #CSStudent #QuantumComputing #TechInnovation</p>
 
-<li>
-    <h2>Education</h2>
+<li class="restofthings">
+    <h2 class="restofthings">Education</h2>
     <ul>
         <li>Highschool from A.B. School navsari</li>
         <li>C.S. from GIDC Degree Engineering College</li>
     </ul>
 </li>
 <li>
-    <h2>Work experience</h2>
+    <h2 class="restofthings">Work experience</h2>
     <ul>
         <li>20 years of experience at breathing</li>
     </ul>
 </li>
 <li>
-    <h2>Skills</h2>
+    <h2 class="restofthings">Skills</h2>
 </li>
-<ul>
+<ul class="restofthings">
     <li>1205 Rated Chess player</li>
     <li>expert in Macihne learning</li>
 </ul>
