--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
     <title>My Resume</title>
 </head>
 <body>
+    <div class="center">
 <img src="img/me.jpg" alt="what !!!" width=auto; height=450px>
 <h1>Shiv Patel</h1>
+</div>
 <br />
 <hr />
+
 <ul>
-<li>
+
+    <li>
     <h2 class="restofthings">Summary</h2>
 </li>
 <p class="restofthings">👋 Hi, I'm Shiv, a CS student delving into the fascinating world of Quantum Computing. 🚀 With a keen eye for logical problem-solving and a knack for coding, I'm navigating the digital landscape.<br>
