--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="styler.css"/>
     <title>My Resume</title>
 </head>
-<body>
+<body class="restofthings">
     <div class="center">
 <img src="img/me.jpg" alt="what !!!" width=auto; height=450px>
 <h1>Shiv Patel</h1>
@@ -35,11 +35,11 @@
 <li>
     <h2 class="restofthings">Work experience</h2>
     <ul>
-        <li>20 years of experience at breathing</li>
+        <li class="restofthings">20 years of experience at breathing</li>
     </ul>
 </li>
 <li>
-    <h2 class="restofthings">Skills</h2>
+    <h2>Skills</h2>
 </li>
 <ul class="restofthings">
     <li>1205 Rated Chess player</li>
